CHANGELOG

>>VERSION 17.6
* Recoded all the flat biome system

+ Added random structures
+ Added Tugar Khan
+ Added Hojtbaatar waypoint
+ Added Jogos Nhai armor
+ Added Tugar Khan achievement

* Improved white walkers attack AI
* Improved massy and cracklaw
* Improved forests and mountains
* Improved spawning
* Improved Bu Gai Quest
* Improved structures generator
* Improved wall gate

* Fixed bug with speech and chat
* Fixed bug with structures of Mossovy
* Fixed bug with sandstone in Westeros
* Fixed bug with Daenerys Targaryen spawning
* Fixed bug with Yi Ti cities
* Fixed bug with valyrian smelting

- Removed Kitra achievement
- Removed Kitra
- Removed Kitra's Camp waypoint
- Removed 28 technical biomes

>>VERSION 17.5
* Reworked Mossovy. Added table, new mobs, structures, villages and fixed genstructures.
* Reworked economics. New gold, silver and valyrian prices. New prices for all items made of these materials
* Reworked units, their prices and armor stats. Balance everywhere!
* Reworked attitude zones, that work in a different way during seasonal changes
+ Added ability to disable fixed structures and legendary characters. Useful for those, who wants to build your own places.
+ Added walls and coverage for the fixed towns!
+ Added levymans, levyman-archers and soldier-archers to Essos
+ Added fixed structures (Stygai, Mossovia hills, etc)
+ Added info about weapon, that can kill walkers or wights
+ Added new speechbanks
+ Added Ulos biome
+ Added new legendary swords into drops of characters
+ Added nomad armor and crafting tables + their support in NEI
+ Added Yi Ti frontiers and crossbowers
+ Added Asshai & Mossovy Banners
+ Added random villages in gift
+ Added new skins for Free Cities
+ Added septon, red and ironborn priests
+ Added gates in the Wall
+ Added Great Yi Ti Wall

+ Enabled vanilla brewing without config

* Improved Asshai mountains
* Improved valyrian spears. Now can kill walkers and wights while is thrown
* Improved gift mobs