@@ -6,7 +6,6 @@
 ~FENCE
 #FENCE_GATE#
 ~ROOF~
-~GROUND~
 
 -1.-1v.-9."dirt".0
 0.-1v.-9."dirt".0
@@ -173,171 +172,6 @@
 -1.-1v.9."dirt".0
 0.-1v.9."dirt".0
 1.-1v.9."dirt".0
--1.0.-9.~GROUND~
-0.0.-9.~GROUND~
-1.0.-9.~GROUND~
--2.0.-8.~GROUND~
--1.0.-8.~GROUND~
-0.0.-8.~GROUND~
-1.0.-8.~GROUND~
-2.0.-8.~GROUND~
--3.0.-7.~GROUND~
--2.0.-7.~GROUND~
--1.0.-7.~GROUND~
-0.0.-7.~GROUND~
-1.0.-7.~GROUND~
-2.0.-7.~GROUND~
-3.0.-7.~GROUND~
--4.0.-6.~GROUND~
--3.0.-6.~GROUND~
--2.0.-6.~GROUND~
--1.0.-6.~GROUND~
-0.0.-6.~GROUND~
-1.0.-6.~GROUND~
-2.0.-6.~GROUND~
-3.0.-6.~GROUND~
-4.0.-6.~GROUND~
--4.0.-5.~GROUND~
--3.0.-5.~GROUND~
--2.0.-5.~GROUND~
--1.0.-5.~GROUND~
-0.0.-5.~GROUND~
-1.0.-5.~GROUND~
-2.0.-5.~GROUND~
-3.0.-5.~GROUND~
-4.0.-5.~GROUND~
--5.0.-4.~GROUND~
--4.0.-4.~GROUND~
--3.0.-4.~GROUND~
--2.0.-4.~GROUND~
--1.0.-4.~GROUND~
-0.0.-4.~GROUND~
-1.0.-4.~GROUND~
-2.0.-4.~GROUND~
-3.0.-4.~GROUND~
-4.0.-4.~GROUND~
-5.0.-4.~GROUND~
--5.0.-3.~GROUND~
--4.0.-3.~GROUND~
--3.0.-3.~GROUND~
--2.0.-3.~GROUND~
--1.0.-3.~GROUND~
-0.0.-3.~GROUND~
-1.0.-3.~GROUND~
-2.0.-3.~GROUND~
-3.0.-3.~GROUND~
-4.0.-3.~GROUND~
-5.0.-3.~GROUND~
--5.0.-2.~GROUND~
--4.0.-2.~GROUND~
--3.0.-2.~GROUND~
--2.0.-2.~GROUND~
--1.0.-2.~GROUND~
-0.0.-2.~GROUND~
-1.0.-2.~GROUND~
-2.0.-2.~GROUND~
-3.0.-2.~GROUND~
-4.0.-2.~GROUND~
-5.0.-2.~GROUND~
--5.0.-1.~GROUND~
--4.0.-1.~GROUND~
--3.0.-1.~GROUND~
--2.0.-1.~GROUND~
--1.0.-1.~GROUND~
-0.0.-1.~GROUND~
-1.0.-1.~GROUND~
-2.0.-1.~GROUND~
-3.0.-1.~GROUND~
-4.0.-1.~GROUND~
-5.0.-1.~GROUND~
--5.0.0.~GROUND~
--4.0.0.~GROUND~
--3.0.0.~GROUND~
--2.0.0.~GROUND~
--1.0.0.~GROUND~
-0.0.0.~GROUND~
-1.0.0.~GROUND~
-2.0.0.~GROUND~
-3.0.0.~GROUND~
-4.0.0.~GROUND~
-5.0.0.~GROUND~
--5.0.1.~GROUND~
--4.0.1.~GROUND~
--3.0.1.~GROUND~
--2.0.1.~GROUND~
--1.0.1.~GROUND~
-0.0.1.~GROUND~
-1.0.1.~GROUND~
-2.0.1.~GROUND~
-3.0.1.~GROUND~
-4.0.1.~GROUND~
-5.0.1.~GROUND~
--5.0.2.~GROUND~
--4.0.2.~GROUND~
--3.0.2.~GROUND~
--2.0.2.~GROUND~
--1.0.2.~GROUND~
-0.0.2.~GROUND~
-1.0.2.~GROUND~
-2.0.2.~GROUND~
-3.0.2.~GROUND~
-4.0.2.~GROUND~
-5.0.2.~GROUND~
--5.0.3.~GROUND~
--4.0.3.~GROUND~
--3.0.3.~GROUND~
--2.0.3.~GROUND~
--1.0.3.~GROUND~
-0.0.3.~GROUND~
-1.0.3.~GROUND~
-2.0.3.~GROUND~
-3.0.3.~GROUND~
-4.0.3.~GROUND~
-5.0.3.~GROUND~
--5.0.4.~GROUND~
--4.0.4.~GROUND~
--3.0.4.~GROUND~
--2.0.4.~GROUND~
--1.0.4.~GROUND~
-0.0.4.~GROUND~
-1.0.4.~GROUND~
-2.0.4.~GROUND~
-3.0.4.~GROUND~
-4.0.4.~GROUND~
-5.0.4.~GROUND~
--4.0.5.~GROUND~
--3.0.5.~GROUND~
--2.0.5.~GROUND~
--1.0.5.~GROUND~
-0.0.5.~GROUND~
-1.0.5.~GROUND~
-2.0.5.~GROUND~
-3.0.5.~GROUND~
-4.0.5.~GROUND~
--4.0.6.~GROUND~
--3.0.6.~GROUND~
--2.0.6.~GROUND~
--1.0.6.~GROUND~
-0.0.6.~GROUND~
-1.0.6.~GROUND~
-2.0.6.~GROUND~
-3.0.6.~GROUND~
-4.0.6.~GROUND~
--3.0.7.~GROUND~
--2.0.7.~GROUND~
--1.0.7.~GROUND~
-0.0.7.~GROUND~
-1.0.7.~GROUND~
-2.0.7.~GROUND~
-3.0.7.~GROUND~
--2.0.8.~GROUND~
--1.0.8.~GROUND~
-0.0.8.~GROUND~
-1.0.8.~GROUND~
-2.0.8.~GROUND~
--1.0.9.~GROUND~
-0.0.9.~GROUND~
-1.0.9.~GROUND~
 -2.1v.-10.~FENCE~
 2.1v.-10.~FENCE~
 -2.1v.-9.~WOOD~
